# lens-designer

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
bridge/: PROTOCOL.md  package.json  tsconfig.json  vitest.config.ts
bridge/assets/: LensDesigner.lspkg
bridge/src/: applier.ts  apply-pipeline.ts  capture.ts  client.ts  connection.ts  daemon.ts  fonts-system.ts  gc.ts  generate.ts  http-server.ts  image-fit.ts  index.ts  instances.ts  layout.ts  live-preview.ts  mcp.ts  pack.ts  prefab.ts  protocol.ts  publish.ts  registry.ts  resolve-writes.ts  scope.ts  view-node.ts  ws-server.ts
bridge/test/: MockCaptureAddon.ts  bridge-client.test.ts  capture-pipeline.test.ts  debounce.test.ts  extract-views.test.ts  image-fit.test.ts  instances.test.ts  layer-z.test.ts  layout.test.ts  manifests.test.ts  mutation-applier.test.ts  no-host-imports.test.ts  no-platform-bleed.test.ts  portToPid.test.ts  prefab-splice.test.ts  protocol-attach-mode.test.ts  protocol.test.ts  region.test.ts  registry.test.ts  resolve-writes.test.ts  resolveConfig.test.ts  sandbox-gate.test.ts  setup.ts  (+3 more)
capture-addon/: Cargo.toml  binding.d.ts  binding.js  index.d.ts  index.js  package.json  tsconfig.json
capture-addon/src/: lib.rs  linux.rs  macos.rs  types.rs  windows.rs
capture-addon/test/: binding-shape.test.ts
desktop/: .gitignore  electron-builder.yml  package.json  tsconfig.json
e2e/: package.json  playwright.config.ts  tsconfig.json
web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+79 files in other folders)
