[package]
name = "lens-designer-capture-addon"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-platform window capture + port-to-pid for Lens Designer."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "async", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
libproc = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = true
strip = "symbols"
